formatting and credit given

--- a/styles/base.less
+++ b/styles/base.less
@@ -1,247 +1,272 @@
 @import "syntax-variables";
 
 atom-text-editor {
-  background-color: @syntax-background-color;
-  color: @syntax-text-color;
+    background-color: @syntax-background-color;
+    color: @syntax-text-color;
 }
-
 :host, atom-text-editor {
-  background-color: @syntax-background-color;
-  color: @syntax-text-color;
+    background-color: @syntax-background-color;
+    color: @syntax-text-color;
 
-  .wrap-guide          { background-color: @syntax-wrap-guide-color; }
-  .indent-guide        { color: @syntax-indent-guide-color; }
-  .invisible-character { color: @syntax-invisible-character-color; }
-
-  .gutter {
-    background-color: @syntax-gutter-background-color;
-    color: @syntax-gutter-text-color;
-
-    .line-number {
-      &.cursor-line {
-        background-color: @syntax-gutter-background-color-selected;
-        color: @syntax-gutter-text-color-selected;
-      }
-
-      &.cursor-line-no-selection {
-        color: @syntax-gutter-text-color-selected;
-      }
+    .wrap-guide {
+        background-color: @syntax-wrap-guide-color;
     }
-  }
-
-  .gutter .line-number.folded,
-  .gutter .line-number:after,
-  .fold-marker:after {
-    color: @light-gray;
-  }
-
-  .invisible  { color: @syntax-text-color; }
-  .cursor     { color: @syntax-cursor-color; }
-  .selection .region { background-color: @syntax-selection-color; }
+    .indent-guide {
+        color: @syntax-indent-guide-color;
+    }
+    .invisible-character {
+       color: @syntax-invisible-character-color;
+    }
+    .gutter {
+        background-color: @syntax-gutter-background-color;
+        color: @syntax-gutter-text-color;
+        .line-number {
+            &.cursor-line {
+                background-color: @syntax-gutter-background-color-selected;
+                color: @syntax-gutter-text-color-selected;
+            }
+            &.cursor-line-no-selection {
+                color: @syntax-gutter-text-color-selected;
+            }
+        }
+    }
+    .gutter .line-number.folded, .gutter .line-number:after,.fold-marker:after {
+        color: @light-gray;
+    }
+    .invisible  {
+        color: @syntax-text-color;
+    }
+    .cursor     {
+        color: @syntax-cursor-color;
+    }
+    .selection .region {
+        background-color: @syntax-selection-color;
+    }
 }
 
 atom-text-editor .search-results .marker .region {
-  background-color: transparent;
-  border: 1px solid @syntax-result-marker-color;
+    background-color: transparent;
+    border: 1px solid @syntax-result-marker-color;
 }
 
 atom-text-editor .search-results .marker.current-result .region {
-  border: 1px solid @syntax-result-marker-color-selected;
+    border: 1px solid @syntax-result-marker-color-selected;
 }
-
-.comment { color: @comment-color; }
-
+.comment {
+    color: @comment-color;
+}
 .entity {
-  &.name.type {
-    color: @entity-color;
-    text-decoration: underline;
-  }
-
-  &.other.inherited-class { color: @green; }
+    &.name.type {
+        color: @entity-color;
+        text-decoration: underline;
+    }
+    &.other.inherited-class {
+        color: @green;
+    }
 }
-
 .keyword {
-  color: @keyword-color;
-
-  &.control              { color: @keyword-color; }
-  &.operator             { color: @keyword-color; }
-  &.other.special-method { color: @keyword-color; }
-  &.other.unit           { color: @keyword-color; }
+    color: @keyword-color;
+    &.control {
+        color: @keyword-color;
+    }
+    &.operator {
+        color: @keyword-color;
+    }
+    &.other.special-method {
+        color: @keyword-color;
+    }
+    &.other.unit {
+        color: @keyword-color;
+    }
 }
-
 .storage {
-  color: @purple;
+    color: @purple;
 }
-
 .constant {
-  color: @constant-color;
-
-  &.character.escape     { color: @constant-color; }
-  &.numeric              { color: @constant-color; }
-  &.mathematical-symbols { color: @text-color; }
-  &.other.color          { color: @constant-color; }
-  &.other.symbol         { color: @constant-color; }
-  &.nil                  { color: @keyword-color; }
+    color: @constant-color;
+    &.character.escape {
+      color: @constant-color;
+    }
+    &.numeric {
+      color: @constant-color;
+    }
+    &.mathematical-symbols {
+      color: @text-color;
+    }
+    &.other.color {
+      color: @constant-color;
+    }
+    &.other.symbol {
+      color: @constant-color;
+    }
+    &.nil {
+      color: @keyword-color;
+    }
 }
-
 .variable {
-  color: #FFFFFF;
-
-  &.interpolation      { color: darken(@red, 10%); }
-  &.parameter.function { color: @syntax-text-color; }
+    color: #FFFFFF;
+    &.interpolation      {
+        color: darken(@red, 10%);
+    }
+    &.parameter.function {
+        color: @syntax-text-color;
+    }
 }
-
 .invalid.illegal {
-  background-color: @red;
-  color: @syntax-background-color;
+    background-color: @red;
+    color: @syntax-background-color;
 }
-
 .string {
-  color: @string-color;
-
-
-  &.regexp {
+    color: @string-color;
+    &.regexp {
     color: @cyan;
-
     .source.ruby.embedded { color: @orange; }
-  }
-
-  &.other.link { color: @red; }
+    }
+    &.other.link {
+        color: @red;
+    }
 }
 
 .punctuation {
-  &.definition {
-    &.comment  { color: @comment-color; }
-    &.constant { color: @constant-color; }
-    &.string   { color: @string-color; }
-
-    &.variable,
-    &.parameters,
-    &.array {
-      color: @syntax-text-color;
+    &.definition {
+        &.comment  {
+            color: @comment-color;
+        }
+        &.constant {
+            color: @constant-color;
+        }
+        &.string {
+            color: @string-color;
+        }
+        &.variable,&.parameters,&.array {
+            color: @syntax-text-color;
+        }
+        &.tag {
+            color: @tag-color;
+        }
+        &.heading, &.identity {
+            color: @blue;
+        }
+        &.bold {
+            color: @light-orange;
+            font-style: bold;
+        }
+        &.italic {
+            color: @purple;
+            font-style: italic;
+        }
     }
-
-    &.tag { color: @tag-color; }
-
-    &.heading,
-    &.identity {
-      color: @blue;
+    &.section.embedded {
+        color: darken(@red, 10%);
     }
-
-    &.bold {
-      color: @light-orange;
-      font-style: bold;
-    }
-
-    &.italic {
-      color: @purple;
-      font-style: italic;
-    }
-  }
-
-  &.section.embedded { color: darken(@red, 10%); }
 }
-
 .support {
-  &.class { color: @light-orange; }
+    &.class {
+        color: @light-orange;
+    }
 
-  &.function  {
-    color: @text-color;
-
-    &.any-method { color: @text-color; }
-    &.misc       { color: @tag-color; }
-  }
-
-  &.property-name  { color: @tag-color; }
-  &.property-value { color: @tag-color; }
+    &.function  {
+        color: @text-color;
+        &.any-method {
+            color: @text-color;
+        }
+        &.misc {
+            color: @tag-color;
+        }
+    }
+    &.property-name  {
+        color: @tag-color;
+    }
+    &.property-value {
+        color: @tag-color;
+    }
 }
 
 .entity {
-  &.name.function {
-    color: @entity-color;
-  }
-
-  &.name.class, &.name.type.class {
-    color: @entity-color;
-  }
-
-  &.name.section {
-    color: @blue;
-  }
-
-  &.name.tag {
-    color: @tag-color;
-
-    &.css,
-    &.scss,
-    &.less { color: @entity-color; } // hard override for stylesheet languages
-
-    &.id, &.class { color: @entity-color; }
-
-    &.reference { color: @keyword-color; }
-  }
-
-  &.other.attribute-name { color: @entity-color; }
+    &.name.function {
+        color: @entity-color;
+    }
+    &.name.class, &.name.type.class {
+        color: @entity-color;
+    }
+    &.name.section {
+        color: @blue;
+    }
+    &.name.tag {
+        color: @tag-color;
+        &.css,&.scss,&.less {
+            color: @entity-color;
+        }
+        &.id, &.class {
+            color: @entity-color;
+        }
+        &.reference {
+            color: @keyword-color;
+        }
+    }
+    &.other.attribute-name {
+        color: @entity-color;
+    }
 }
 
 .meta {
-  &.class {
-    color: @light-orange;
-  }
-
-  &.link {
-    color: @orange;
-  }
-
-  &.require {
-    color: @blue;
-  }
-
-  &.selector {
-    color: @purple;
-  }
-
-  &.separator {
-    background-color: @gray;
-    color: @syntax-text-color;
-  }
+    &.class {
+        color: @light-orange;
+    }
+    &.link {
+        color: @orange;
+    }
+    &.require {
+        color: @blue;
+    }
+    &.selector {
+        color: @purple;
+    }
+    &.separator {
+        background-color: @gray;
+        color: @syntax-text-color;
+    }
 }
-
-.none { color: @syntax-text-color; }
-
+.none {
+    color: @syntax-text-color;
+}
 .markup {
-  &.bold {
+    &.bold {
     color: @orange;
     font-style: bold;
-  }
-
-  &.changed { color: @purple; }
-
-  &.deleted { color: @red; }
-
-  &.italic {
-    color: @purple;
-    font-style: italic;
-  }
-
-  &.heading .punctuation.definition.heading { color: @blue; }
-
-  &.inserted { color: @green; }
-  &.list     { color: @red; }
-  &.quote    { color: @orange; }
-
-  &.raw.inline {
-    color: @green;
-  }
+    }
+    &.changed {
+        color: @purple;
+    }
+    &.deleted {
+        color: @red;
+    }
+    &.italic {
+        color: @purple;
+        font-style: italic;
+    }
+    &.heading .punctuation.definition.heading {
+        color: @blue;
+    }
+    &.inserted {
+        color: @green;
+    }
+    &.list {
+        color: @red;
+    }
+    &.quote {
+        color: @orange;
+    }
+    &.raw.inline {
+        color: @green;
+    }
 }
-
 .source.gfm .markup {
-  -webkit-font-smoothing: auto;
-  &.heading {
-    color: @green;
-  }
+    -webkit-font-smoothing: auto;
+    &.heading {
+        color: @green;
+    }
 }
-
 atom-text-editor[mini] .scroll-view {
-  padding-left: 1px;
+    padding-left: 1px;
 }
