--- a/styles/colors.less
+++ b/styles/colors.less
@@ -4,7 +4,7 @@
 @text-color:       #F8F8F8;
 @selection-color:  #253B76;
 @string-color:     #61CE3C;
-@comment-color:    #E75D6A;
+@comment-color:    #929292;
 @constant-color:   #D8FA3C;
 @entity-color:     #FF6400;
 @keyword-color:    #FBDE2D;
