new colors for php

--- a/styles/base.less
+++ b/styles/base.less
@@ -4,6 +4,21 @@ atom-text-editor {
     background-color: @syntax-background-color;
     color: @syntax-text-color;
 }
+.namespace.php{
+    color: #8DA6CE;
+}
+.magic.php{
+    color: #8DA6CE !important;
+}
+.storage.type.php, .function.construct.php{
+    color: #fbde2d !important;
+}
+.modifier.php, .storage.type.function.php{
+    color: #fbde2d !important;
+}
+.function-call.object.php, .function-call.static.php{
+    color: #b294bb;
+}
 :host, atom-text-editor {
     background-color: @syntax-background-color;
     color: @syntax-text-color;
