better consistency for classes

--- a/styles/base.less
+++ b/styles/base.less
@@ -4,6 +4,13 @@ atom-text-editor {
     background-color: @syntax-background-color;
     color: @syntax-text-color;
 }
+.punctuation.section.embedded.begin.php{
+    color: #FFFFFF;
+}
+.entity.name.type.class.php, .entity.name.type.namespace.php, .entity.other.inherited-class.php{
+    color: #f0c674;
+    text-decoration: underline;
+}
 .namespace.php{
     color: #8DA6CE;
 }
