New update… to built in functions for PHP

--- a/styles/base.less
+++ b/styles/base.less
@@ -11,6 +11,9 @@ atom-text-editor {
     color: #f0c674;
     text-decoration: underline;
 }
+.support.function.string.php{
+    color: #b294bb;
+}
 .namespace.php{
     color: #8DA6CE;
 }
@@ -29,7 +32,6 @@ atom-text-editor {
 :host, atom-text-editor {
     background-color: @syntax-background-color;
     color: @syntax-text-color;
-
     .wrap-guide {
         background-color: @syntax-wrap-guide-color;
     }
