consolidation of php function colors

--- a/styles/base.less
+++ b/styles/base.less
@@ -11,10 +11,7 @@ atom-text-editor {
     color: #f0c674;
     text-decoration: underline;
 }
-.support.function.string.php{
-    color: #b294bb;
-}
-.support.function.array.php{
+.support.function.file.php, .support.function.errorfunc.php, .support.function.string.php, .support.function.array.php{
     color: #b294bb;
 }
 .namespace.php{
