new function support color

--- a/styles/base.less
+++ b/styles/base.less
@@ -11,7 +11,11 @@ atom-text-editor {
     color: #f0c674;
     text-decoration: underline;
 }
-.support.function.file.php, .support.function.errorfunc.php, .support.function.string.php, .support.function.array.php{
+.support.function.file.php,
+.support.function.errorfunc.php,
+.support.function.string.php,
+.support.function.array.php,
+.support.function.classobj.php{
     color: #b294bb;
 }
 .namespace.php{
