--- a/styles/base.less
+++ b/styles/base.less
@@ -11,11 +11,7 @@ atom-text-editor {
     color: #f0c674;
     text-decoration: underline;
 }
-.support.function.file.php,
-.support.function.errorfunc.php,
-.support.function.string.php,
-.support.function.array.php,
-.support.function.classobj.php{
+.support.function.php{
     color: #b294bb;
 }
 .namespace.php{
