New function Colors

--- a/styles/base.less
+++ b/styles/base.less
@@ -11,7 +11,10 @@ atom-text-editor {
     color: #f0c674;
     text-decoration: underline;
 }
-.support.function.php{
+.support.function.php, {
+    color: #b294bb;
+}
+span.meta.function-call.php{
     color: #b294bb;
 }
 .namespace.php{
