Blacker background for better viewing on hi-res displays

--- a/styles/base.less
+++ b/styles/base.less
@@ -1,8 +1,17 @@
 @import "syntax-variables";
 
 atom-text-editor {
-    background-color: @syntax-background-color;
+    background-color: rgb(0,0,0) !important;
     color: @syntax-text-color;
+}
+atom-text-editor, atom-text-editor {
+    background-color: rgb(0,0,0) !important;
+}
+element.style {
+    background-color: rgb(0,0,0) !important;
+}
+atom-workspace {
+    background-color: rgb(0,0,0) !important;
 }
 // Language Specific Style
 
