--- a/styles/base.less
+++ b/styles/base.less
@@ -324,3 +324,7 @@ atom-text-editor .search-results .marker.current-result .region {
 atom-text-editor[mini] .scroll-view {
     padding-left: 1px;
 }
+
+.syntax--meta.syntax--class {
+    color: white;
+}
