Just updating for built-in functions

--- a/styles/base.less
+++ b/styles/base.less
@@ -37,6 +37,12 @@ span.entity.name.function.decorator.python{
 .support.function.magic.python{
     color: #8DA6CE !important;
 }
+span.syntax--string.syntax--quoted.syntax--double.syntax--block.syntax--python {
+    color: grey;
+}
+span.syntax--support.syntax--function.syntax--builtin.syntax--python {
+    color: #b294bb;
+}
 // PHP
 .punctuation.section.embedded.begin.php{
     color: #FFFFFF;
