--- a/styles/base.less
+++ b/styles/base.less
@@ -18,41 +18,24 @@ atom-workspace {
 //////////////////////////////
 
 // Python
-span.meta.function-call.python{
-    color: #b294bb;
-}
-span.meta.function-call.arguments.python,
+.meta.function-call.arguments.python,
 .entity.other.inherited-class.python{
     color: white;
 }
-span.entity.name.function.decorator.python{
+.syntax--entity.syntax--name.syntax--function.syntax--decorator{
     color: #03A9F4;
 }
-.storage.type.function.python,
-.storage.type.class.python{
-    color: #fbde2d !important;
+.syntax--storage.syntax--type.syntax--class {
+    color: #fbde2d;
 }
-.entity.name.type.class.python{
-    color: #f0c674;
+.syntax--storage.syntax--type.syntax--function {
+    color: #fbde2d;
 }
-.string.quoted.double.block.sql.python,
-.punctuation.definition.string.begin.python,
-.punctuation.definition.string.end.python{
-    color: #929292;
-}
-.support.function.magic.python{
+.syntax--entity.syntax--name.syntax--type.syntax--class{
     color: #8DA6CE !important;
 }
-span.syntax--string.syntax--quoted.syntax--double.syntax--block.syntax--python {
-    color: grey;
-}
-span.syntax--support.syntax--function.syntax--builtin.syntax--python {
-    color: #b294bb;
-}
-.syntax--variable.syntax--language.syntax--python.syntax--self,
-.syntax--variable.syntax--language.syntax--js.syntax--this,
-syntax--variable.syntax--language.syntax--java.syntax--this {
-    color: #f74949
+.syntax--variable.syntax--other.syntax--object.syntax--property {
+    color: #BECDE6;
 }
 // PHP
 .punctuation.section.embedded.begin.php{
