--- a/styles/base.less
+++ b/styles/base.less
@@ -37,6 +37,31 @@ atom-workspace {
 .syntax--variable.syntax--other.syntax--object.syntax--property {
     color: #BECDE6;
 }
+// Magic Python
+span.syntax--variable.syntax--language.syntax--special.syntax--self.syntax--python {
+    color: #BECDE6;
+}
+span.syntax--meta.syntax--function-call.syntax--generic.syntax--python {
+    color: #FF6400;
+}
+span.syntax--support.syntax--function.syntax--builtin.syntax--python {
+    color: #b294bb;
+}
+span.syntax--support.syntax--type.syntax--python {
+    color: #b294bb;
+}
+span.syntax--punctuation.syntax--definition.syntax--string.syntax--begin.syntax--python {
+    color: #929292;
+}
+span.syntax--punctuation.syntax--definition.syntax--string.syntax--end.syntax--python {
+    color: #929292;
+}
+span.syntax--string.syntax--quoted.syntax--docstring.syntax--multi.syntax--python {
+    color: #929292;
+}
+span.syntax--keyword.syntax--codetag.syntax--notation.syntax--python {
+    color: #b5bd68;
+}
 // PHP
 .punctuation.section.embedded.begin.php{
     color: #FFFFFF;
