--- a/styles/base.less
+++ b/styles/base.less
@@ -62,6 +62,9 @@ span.syntax--string.syntax--quoted.syntax--docstring.syntax--multi.syntax--pytho
 span.syntax--keyword.syntax--codetag.syntax--notation.syntax--python {
     color: #b5bd68;
 }
+span.syntax--support.syntax--function.syntax--magic.syntax--python {
+    color: #b294bb;
+}
 // PHP
 .punctuation.section.embedded.begin.php{
     color: #FFFFFF;
