--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,5 +1,3 @@
-// These colors are specific to the theme. Do not use in a package!
-
 @background-color: #0C1021;
 @text-color:       #F8F8F8;
 @selection-color:  #253B76;
@@ -13,6 +11,9 @@
 @error-color:      #9D1E15;
 @function-color:   #BECDE6;
 @tag-color:        #7F90AA;
+@helper-blue:      #03A9F4;
+@syntax-orage:     #fbde2d;
+@variable-white:   white;
 
 @very-light-gray: #c5c8c6;
 @light-gray: #969896;
@@ -20,6 +21,7 @@
 @dark-gray: #282a2e;
 @very-dark-gray: #1d1f21;
 
+@white: white;
 @cyan: #8abeb7;
 @blue: #81a2be;
 @purple: #b294bb;
