--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -1,8 +1,5 @@
 @import "colors";
 
-// This defines all syntax variables that syntax themes must implement when they
-// include a syntax-variables.less file.
-
 // General colors
 @syntax-text-color: @text-color;
 @syntax-cursor-color: @text-color;
@@ -16,7 +13,7 @@
 
 // For find and replace markers
 @syntax-result-marker-color: @light-gray;
-@syntax-result-marker-color-selected: white;
+@syntax-result-marker-color-selected: @white;
 
 // Gutter colors
 @syntax-gutter-text-color: @very-light-gray;
